# home-stream

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  REUSE.toml  docker-compose.sample.yaml  nginx.sample.conf  pyproject.toml  release-please-config.json  renovate.json5  uwsgi.docker.ini  uwsgi.ini
.github/actions/poetrybuild/: action.yaml
.github/actions/uvbuild/: action.yaml
.github/workflows/: ci-security.yaml  docker.yaml  publish.yaml  release-please.yaml  release-vulnerabilities.yaml  test.yaml
config/: config.sample.yaml
home_stream/: __init__.py  app.py  forms.py  helpers.py
home_stream/static/: main.js  style.css
home_stream/templates/: base.html  browse.html  login.html  play.html
tests/: __init__.py  conftest.py  test_helpers.py  test_routes.py  test_templates.py  test_wsgi.py
