# SPDX-FileCopyrightText: 2025 Max Mehl <https://mehl.mx>
#
# SPDX-License-Identifier: GPL-3.0-only

[project]
name = "home-stream"
version = "1.5.4"
description = "Browser and streaming interface for local media files"
authors = [{ name = "Max Mehl", email = "mail@mehl.mx" }]
requires-python = ">=3.10,<4"
readme = "README.md"
license = "GPL-3.0-only"
keywords = []
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "bcrypt>=5.0.0,<6",
    "pyyaml>=6.0.3,<7",
    "flask>=3.1.2,<4",
    "flask-wtf>=1.2.2,<2",
    "flask-limiter[redis, valkey]>=4.0.0,<5",
]

[project.urls]
Repository = "https://github.com/mxmehl/home-stream"

[project.scripts]
home-stream = "home_stream.app:main"

[dependency-groups]
web = ["uwsgi>=2.0.31,<3"]
dev = [
    "ruff>=0.15.10",
    "ty>=0.0.29",
    "pytest>=9.0.0,<10",
    "pytest-flask>=1.3.0,<2",
    "pytest-cov>=7.0.0,<8",
    "beautifulsoup4>=4.14.2,<5",
    "h11>=0.16.0,<0.17",
]

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-name = ["home_stream"]
module-root = ""

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

# FORMATTING and LINTING settings
[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "T",
    "FBT",
    "LOG015",
    "COM812",
    "ERA001",
    "S310",
    "D205",
    "D212",
    "PTH123",
    "TD002",
    "TD003",
    "FIX002",
]
[tool.ruff.lint.extend-per-file-ignores]
"home_stream/helpers.py" = ["PTH"]
"tests/*" = [
    "S101",
    "S105",
    "S108",
    "PLR",
    "PT011",
    "ANN001",
    "ANN201",
    "ARG001",
    "ARG005",
    "PLC0415",
    "PTH",
]
[tool.ruff.lint.pydocstyle]
convention = "google"

# TY settings
[tool.ty.src]
include = ["home_stream"]
